2004-02-23  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/posix/getaddrinfo.c (gaih_inet): If _res has not been
	inited yet, try to init it before saving old _res.options.
	* posix/Makefile (xtests): Add bug-ga2.
	(generated): Add bug-ga2.mtrace and bug-ga2-mem.
	(xtests): Depend on bug-ga2-mem.
	($(objpfx)bug-ga2-mem, bug-ga2-ENV): New.
	* posix/bug-ga2.c: New test.

2004-02-22  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/i386/posix_fadvise64.S: Pop register
	content also in case of an overflow in the parameter.
	Reported by Momchil Velikov <velco@fadata.bg>.

2004-02-21  Ulrich Drepper  <drepper@redhat.com>

	* elf/dynamic-link.h (elf_get_dynamic_info): Recognize DF_1_NOW.
	In ld.so, neither DT_FLAGS nor DT_FLAGS_1 must be used.

2004-02-21  Andreas Jaeger  <aj@suse.de>

	* posix/bug-ga1.c: Include <string.h> for memset prototype.

	* elf/dl-load.c (_dl_map_object_from_fd): Fix casts used as lvalue.

	* iconv/gconv_simple.c (internal_ucs4le_loop): Remove cast used as
	lvalue.

2004-02-19  Carlos O'Donell  <carlos@baldric.uwo.ca>

	* sysdeps/generic/framestate.c [__USING_SJLJ_EXCEPTIONS__]
	(__frame_state_for): Set frame_State_for to abort if the compiler
	is using sjlj.
	* sysdeps/generic/unwind-dw2.c: Allow sjlj enabled compilers to
	build the code by removing __USING_SJLJ_EXCEPTIONS__ wrapper.

2004-02-20  Alexandre Oliva  <aoliva@redhat.com>

	* resolv/Versions: Remove semicolon from the end of libresolv's
	GLIBC_2.3.2 version block.
	* Versions.def (libresolv): Add GLIBC_2.3.2.

2004-02-19  Carlos O'Donell  <carlos@baldric.uwo.ca>

	* sysdeps/hppa/fpu/feholdexcpt.c (feholdexcept): Fix order of fp
	status register loads.

2004-02-20  Thorsten Kukuk  <kukuk@suse.de>

	* nscd/nscd.c (termination_handler): Use _exit instead of exit

2004-02-20  Ulrich Drepper  <drepper@redhat.com>

	* nscd/nscd.c (main): Report fork errors.

	* dlfcn/dlsym.c: Get ld.so loading lock before the call into ld.so.
	* dlfcn/dlvsym.c: Likewise.